<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fes.aragon</groupId>
	<artifactId>Exam1Drive</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>war</packaging>
<!-- 	<build> -->
<!-- 		<plugins> -->
<!-- 			<plugin> -->
<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
<!-- 				<artifactId>maven-compiler-plugin</artifactId> -->
<!-- 				<version>3.8.0</version> -->
<!-- 			</plugin> -->
<!-- 		</plugins> -->
<!-- 	</build> -->
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<!-- JDK9+ Add Module MAGIC happens below... -->
					<!-- Add implicit default JDK9+ java.se explicitly -->
					<!-- Add explicit java.desktop for import java.awt.*; -->
					<compilerArgs>
						<arg>--add-modules</arg>
						<arg>java.se,java.desktop</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<properties>
		<project.build.sourceEncoding>
			UTF-8
		</project.build.sourceEncoding>
		<project.reporting.outputEncoding>
			UTF-8
		</project.reporting.outputEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<java.version>11</java.version>
		<failOnMissingWebXml>false</failOnMissingWebXml>
	</properties>
	<dependencies>
		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-api</artifactId>
			<version>8.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.primefaces</groupId>
			<artifactId>primefaces</artifactId>
			<version>10.0.0</version>
		</dependency>
		<!-- Data Exporter -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>5.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>5.0.0</version>
			<exclusions>
				<exclusion>
					<groupId>com.github.virtuald</groupId>
					<artifactId>curvesapi</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.xmlgraphics</groupId>
					<artifactId>batik-all</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.santuario</groupId>
					<artifactId>xmlsec</artifactId>
				</exclusion>
				<exclusion>
					<groupId>de.rototor.pdfbox</groupId>
					<artifactId>graphics2d</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bouncycastle</groupId>
					<artifactId>bcpkix-jdk15on</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bouncycastle</groupId>
					<artifactId>bcprov-jdk15on</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.github.librepdf</groupId>
			<artifactId>openpdf</artifactId>
			<version>1.3.23</version>
		</dependency>
		<!-- FeedReader -->
		<dependency>
			<groupId>com.rometools</groupId>
			<artifactId>rome</artifactId>
			<version>1.15.0</version>
		</dependency>
		<!-- File Upload -->
		<dependency>
			<groupId>org.overviewproject</groupId>
			<artifactId>mime-types</artifactId>
			<version>1.0.2</version>
		</dependency>
		<!-- Twitter API -->
		<dependency>
			<groupId>org.twitter4j</groupId>
			<artifactId>twitter4j-core</artifactId>
			<version>3.0.6</version>
		</dependency>
		<!-- Logging -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.7.32</version>
		</dependency>

		<!-- GraphicImage -->
		<dependency>
			<groupId>net.sourceforge.barbecue</groupId>
			<artifactId>barbecue</artifactId>
			<version>1.5-beta1</version>
		</dependency>
		<dependency>
			<groupId>jfree</groupId>
			<artifactId>jfreechart</artifactId>
			<version>1.0.1</version>
		</dependency>
		<!-- Barcode -->
		<dependency>
			<groupId>io.nayuki</groupId>
			<artifactId>qrcodegen</artifactId>
			<version>1.6.0</version>
		</dependency>
		<dependency>
			<groupId>net.sf.barcode4j</groupId>
			<artifactId>barcode4j-light</artifactId>
			<version>2.0</version>
		</dependency>
		<!-- Cache -->
		<dependency>
			<groupId>org.ehcache</groupId>
			<artifactId>ehcache</artifactId>
			<version>3.9.6</version>
		</dependency>
		<!-- HTML sanitizer for the textEditor -->
		<dependency>
			<groupId>com.googlecode.owasp-java-html-sanitizer</groupId>
			<artifactId>owasp-java-html-sanitizer</artifactId>
			<version>20200713.1</version>
		</dependency>
		<!-- JSON-parsing used by PrimeIconsView -->
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20210307</version>
		</dependency>
	</dependencies>
</project>